--- a/index.html
+++ b/index.html
@@ -5,7 +5,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>카카오엔터프라이즈</title>
+<!-- Primary Meta Tags -->
+<title>카카오엔터프라이즈</title>
+<meta name="title" content="카카오엔터프라이즈" />
+<meta name="description" content="카카오엔터프라이즈의 pc 적응형 사이트 입니다. 감사합니다." />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://zyzy8810.github.io/kakaoenterprise/" />
+<meta property="og:title" content="카카오엔터프라이즈" />
+<meta property="og:description" content="카카오엔터프라이즈의 pc 적응형 사이트 입니다. 감사합니다." />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://zyzy8810.github.io/kakaoenterprise/" />
+<meta property="twitter:title" content="카카오엔터프라이즈" />
+<meta property="twitter:description" content="카카오엔터프라이즈의 pc 적응형 사이트 입니다. 감사합니다." />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./assets/css/layout.css">
   <link rel="stylesheet" href="./assets/css/main.css">
