--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 </head>
 
 <body>
+  <div class="skip-nav">
+    <a href="#main">본문내용바로가기</a>
+  </div>
 
   <header class="header">
     <div class="inner1">
